# test-payment-processing-service-ddd

./: .dockerignore  .env.sample  .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  create-multiple-postgresql-databases.sh  declare-rabbitmq-queues-and-exchanges.sh  docker-compose.db-update.yml  docker-compose.dev.yml  docker-compose.yml  local-test-tasks.postman_collection.json  pyproject.toml
src/: main.py
src/application/services/: __init__.py  base.py  payments.py  webhooks.py
src/domain/entities/: __init__.py  base.py  payments.py
src/domain/exceptions/: __init__.py  webhooks.py
src/domain/interfaces/repositories/: __init__.py  base.py  payments.py
src/domain/interfaces/services/: __init__.py  base.py  payments.py  webhooks.py
src/infrastructure/config/: constants.py  settings.py
src/infrastructure/config/pgbouncer/: pgbouncer.ini  userlist.txt
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 2026-06-19_14-46-46_5f012a199131_create_table_payments.py  (+2 more)
src/infrastructure/database/models/: __init__.py  base.py  outbox.py  payments.py
src/infrastructure/database/repositories/: __init__.py  base.py  payments.py
src/infrastructure/database/sessions/: base.py  engine.py
src/infrastructure/ioc/: __init__.py  provides.py  repositories.py  services.py
src/presentation/api/middlewares/: __init__.py  api_key_header.py  request_processing_time.py
src/presentation/api/routes/: __init__.py  health_check.py  outbox.py  payments.py  rabbit.py  webhooks.py
src/presentation/api/schemas/: payments.py
src/presentation/consumers/: payments.py
src/presentation/utils/helpers/: custom_dict.py  custom_json.py  project.py
