[project]
name = "payment-processing-service-ddd"
version = "0.1.0"
description = "Test Tasks: Payment Processing Service DDD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "faststream[cli]>=0.7.1",
    "faststream-outbox>=0.10.4",
    "httpx>=0.28.1",
    "idemptx>=0.2.2",
    "isodate>=0.7.2",
    "loguru>=0.7.3",
    "pydantic-i18n>=0.4.5",
    "pydantic-settings>=2.14.2",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-serializer>=1.6.3",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
]
